# large-scale-computing

./: .gitignore
lab2/: blender.sh  hello-world.sh  lines.sh  slurm-1297986_1.out  slurm-1297986_3.out  slurm-1297986_4.out  slurm-1297986_5.out  slurm-1297986_6.out  slurm-1297986_7.out  slurm-1297986_8.out  slurm-1297986_9.out  slurm-1298076_1.out  slurm-1298076_10.out  slurm-1298076_2.out  slurm-1298076_3.out  slurm-1298076_4.out  slurm-1298076_5.out  slurm-1298076_6.out  slurm-1298076_7.out  slurm-1298076_8.out  slurm-1298076_9.out  slurm-1298628_1.out  slurm-1298628_10.out  slurm-1298628_2.out  slurm-1298628_3.out  slurm-1298628_4.out  slurm-1298628_5.out  slurm-1298628_6.out  slurm-1298628_7.out  slurm-1298628_8.out  slurm-1298628_9.out
lab3/: Cargo.toml  submit-lscuper.sh
lab3/src/: ares_client.rs  main.rs  rimrock_client.rs
lab4/: Cargo.toml  readme.md
lab4/src/: main.rs
lab5/: Cargo.toml
lab5/src/: main.rs
lab6/: readme.md
lab6/lambda-s3-integration/: .gitignore  README.md  ala.txt  samconfig.toml  template.yaml
lab6/lambda-s3-integration/hello-world/: app.js  package-lock.json  package.json
lab6/lcs-first-function/: README.md  samconfig.toml  template.yaml
lab6/lcs-first-function/events/: event.json
lab6/lcs-first-function/hello-world/: app.js
lab7/task1/: Dockerfile
lab7/task2/: Dockerfile
lab7/task2/simple-website/: LICENSE.txt  README.md
lab7/task2/simple-website/src/: index.html
