[package]
name = "lab5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-types = "0.51.0"
aws-smithy-http = "0.51.0"
aws-sdk-s3 = "0.21.0"

tokio = { version = "1", features = ["full"] }
color-eyre = "0.6.2"
clap = { version = "4.0.19", features = ["derive"] }